Fix dust icon overflowing

--- a/Files/src/css/component/main-window.component.scss
+++ b/Files/src/css/component/main-window.component.scss
@@ -20,6 +20,7 @@ body {
 	align-items: center;
 	height: 100%;
 	filter: drop-shadow(0 0 5px rgba(0, 0, 0, .7));
+    overflow: hidden;
 
 	.corner {
 		position: absolute;
